--- a/baRulho.Rcheck/baRulho/html/00Index.html
+++ b/baRulho.Rcheck/baRulho/html/00Index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><title>R: Quantifying sound degradation</title>
+<head><title>R: Quantifying Habitat-Induced Acoustic Signal Degradation</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
-<h1> Quantifying sound degradation
+<h1> Quantifying Habitat-Induced Acoustic Signal Degradation
 <img class="toplogo" src="../../../doc/html/Rlogo.svg" alt="[R logo]" />
 </h1>
 <hr/>
@@ -20,19 +20,31 @@
 
 
 <table width="100%">
-<tr><td style="width: 25%;"><a href="baRulho.html">baRulho-package</a></td>
-<td>baRulho: quantifying sound degradation</td></tr>
+<tr><td style="width: 25%;"><a href="atmospheric_attenuation.html">atmospheric_attenuation</a></td>
+<td>Measure atmospheric attenuation and absorption of sound</td></tr>
 <tr><td style="width: 25%;"><a href="baRulho.html">baRulho</a></td>
-<td>baRulho: quantifying sound degradation</td></tr>
+<td>baRulho: quantifying habitat-induced acoustic signal degradation</td></tr>
 <tr><td style="width: 25%;"><a href="blur_ratio.html">blur_ratio</a></td>
-<td>Measure blur ratio</td></tr>
-<tr><td style="width: 25%;"><a href="env_cor.html">env_cor</a></td>
+<td>Measure blur ratio in the time domain</td></tr>
+<tr><td style="width: 25%;"><a href="envelope_correlation.html">envelope_correlation</a></td>
 <td>Measure amplitude envelope correlation</td></tr>
-<tr><td style="width: 25%;"><a href="excess_att.html">excess_att</a></td>
+<tr><td style="width: 25%;"><a href="excess_attenuation.html">excess_attenuation</a></td>
 <td>Measure excess attenuation</td></tr>
+<tr><td style="width: 25%;"><a href="master_sound_file.html">master_sound_file</a></td>
+<td>Create a master sound file</td></tr>
 <tr><td style="width: 25%;"><a href="playback_est.html">playback_est</a></td>
 <td>Extended selection table with re-recorded playbacks</td></tr>
-<tr><td style="width: 25%;"><a href="xcorr_distortion.html">xcorr_distortion</a></td>
+<tr><td style="width: 25%;"><a href="playback_est_unaligned.html">playback_est_unaligned</a></td>
+<td>Extended selection table with re-recorded playbacks before alignment</td></tr>
+<tr><td style="width: 25%;"><a href="snr.html">snr</a></td>
+<td>Measure attenuation as signal-to-noise ratio</td></tr>
+<tr><td style="width: 25%;"><a href="spcc.html">spcc</a></td>
 <td>Measure spectrographic cross-correlation as a measure of signal distortion</td></tr>
+<tr><td style="width: 25%;"><a href="spcc_align.html">spcc_align</a></td>
+<td>Align start and end of signal using spectrographic cross-correlation</td></tr>
+<tr><td style="width: 25%;"><a href="spectral_blur_ratio.html">spectral_blur_ratio</a></td>
+<td>Measure blur ratio in the frequency domain</td></tr>
+<tr><td style="width: 25%;"><a href="spectral_correlation.html">spectral_correlation</a></td>
+<td>Measure frequency spectrum correlation</td></tr>
 </table>
 </body></html>
